--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
                                         <div class="sidebar">
                                                 <div class="sidebar-menu">
                                                         <div class="link1">
-                                                            <a href="#" a1="a1 menu"><span class="material-symbols-outlined">home</span><div id="m1">Home</div></a>
+                                                            <a href="#" id="a1 menu"><span class="material-symbols-outlined menu">home</span><div id="m1">Home</div></a>
                                                         </div>
                                                         <div class="link2">
-                                                            <a href="#" id="a2 menu"><span class="material-symbols-outlined">group_work</span><div id="m2">My artworks</div></a>
+                                                            <a href="#" id="a2 menu"><span class="material-symbols-outlined menu1">group_work</span><div id="m2">My artworks</div></a>
                                                         </div>
                                                         <div class="link3">
-                                                            <a href="#" id="a3 menu"><span class="material-symbols-outlined">favorite</span><div id="m3">Favourites</div></a>
+                                                            <a href="#" id="a3 menu"><span class="material-symbols-outlined menu1">favorite</span><div id="m3">Favourites</div></a>
                                                         </div>
                                                         <div class="link4">
-                                                            <a href="#" id="a4 menu "><span class="material-symbols-outlined">person_2</span><div id="m4">Account Settings</div></a>
+                                                            <a href="#" id="a4 menu "><span class="material-symbols-outlined menu1">person_2</span><div id="m4">Account Settings</div></a>
                                                         </div>
                                                         <div class="link5">
-                                                            <a href="#" id="a5 menu"><span class="material-symbols-outlined">subscriptions</span><div id="m5">Subscriptions</div></a>
+                                                            <a href="#" id="a5 menu"><span class="material-symbols-outlined menu1">subscriptions</span><div id="m5">Subscriptions</div></a>
                                                         </div>
                                                         <div class="link6">
-                                                            <a href="#" id="a6 menu"><span class="material-symbols-outlined">credit_card</span><div id="m6">Payments</div></a>
+                                                            <a href="#" id="a6 menu"><span class="material-symbols-outlined menu1">credit_card</span><div id="m6">Payments</div></a>
                                                         </div>
                                                     </div>
                                               </div>
-                                         </div> 
+                                         </div>     
                                         <div class="content-section">
                                             <div class="head1">
                                                 <h1>👋🏻 Hey James!</h1>
