--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <div class="sub-container">
             <div class="header">
                  <div class="head">
-                    <div class="logo">
+                    <div class="logo h1">
                         <a href="#"><img src="./images/Ber_img.png" alt=""></a>
                     </div>
-                    <div class="menubar">
+                    <div class="menubar h1">
                             <a href="#" class="currentlink menulink">Dashboard</a>
                             <a href="#" class="menulink" >Discover arts</a>
                             <a href="#" class="menulink">Connect</a>
                     </div>
-                    <div class="profilelink">
+                    <div class="profilelink h1">
                         <div class="profile-img">
                             <a href="#"><img src="./images/avatar.png"></a>
                         </div>
