--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="menubar h1">
                             <a href="#" class="currentlink menulink">Dashboard</a>
-                            <a href="#" class="menulink" >Discover arts</a>
+                            <a href="#" class="menulink" >Discover<span id="a-rt">arts</span></a>
                             <a href="#" class="menulink">Connect</a>
                     </div>
                     <div class="profilelink h1">
