--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                                                 <h4>AI bot assistant</h4>
                                                             </div>
                                                             <div class="symbol1 dot" >
-                                                                <span id="circle"><b>...</b></span>
+                                                                <span id="circle"class="circle1"><b>...</b></span>
                                                             </div>
                                                         </div>
                                                         <div class="para1">
